--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,3 +1,9 @@
 body{
   background-image: url("https://previews.123rf.com/images/backyardproduction/backyardproduction1510/backyardproduction151000192/47375068-aerial-or-top-down-view-of-the-detail-of-newly-mown-grass-in-well-tended-lawn.jpg");
 }
+
+div div{
+  padding-left: 5px;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+}
